frontend login/registration form with handlers, http hook and err processing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,6 @@
 @import "~materialize-css/dist/css/materialize.min.css";
+@import "~material-design-icons/iconfont/material-icons.css";
+
+.auth-w {
+    margin-top: 100px;
+}
